# Platformer

./: CMakeLists.txt  README.md
src/: main.cpp
src/engine/: action_map.hpp  color.hpp  command_buffer.hpp  core.hpp  image.hpp  input.hpp  line_batch.hpp  log.hpp  renderer.hpp  shader_program.hpp  sprite_batch.hpp  transform.hpp  vmath.hpp  window.hpp
src/engine/impl/: action_map.cpp  color.cpp  core.cpp  image.cpp  input.cpp  line_batch.cpp  log.cpp  renderer.cpp  shader_program.cpp  sprite_batch.cpp  transform.cpp  window.cpp
src/engine/shaders/: line_shader.hpp  sprite_shader.hpp
